# AplikacjeDesktopowe

PPMConsole/: CMakeLists.txt  PPMImage.h  main.cpp
PPMQt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PPMImage.cpp  main.cpp
listaJednokierunkowa/: list.c  list.h  listaJednokierunkowa.sln  listaJednokierunkowa.vcxproj  listaJednokierunkowa.vcxproj.filters  main.c  queue.c  queue.h  stack.c  stack.h
listaJednokierunkowa/listaJed.8668a424/x64/Debug/: listaJednokierunkowa.exe.recipe  listaJednokierunkowa.ilk  vc143.idb
listaJednokierunkowa/listaJed.8668a424/x64/Debug/listaJed.8668a424.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  listaJednokierunkowa.lastbuildstate
losowaDroga/: CMakeLists.txt  main.cpp
polePowierzchni/: CMakeLists.txt  main.cpp
probkiTemperatury/: CMakeLists.txt  main.cpp
